--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.10.7",
+    "@antv/data-set": "^0.10.2",
+    "@antv/g2": "^3.4.10",
+    "antd": "^3.13.0",
     "babel-plugin-import": "^1.11.0",
-    "moment": "^2.22.2",
+    "bizcharts": "^3.4.3",
+    "echarts": "^4.2.0-rc.2",
+    "g2": "^2.3.13",
+    "g2-react": "^1.3.2",
+    "history": "^4.7.2",
+    "moment": "^2.23.0",
     "react": "^16.6.1",
+    "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.1",
+    "react-highlight-words": "^0.16.0",
+    "react-navigation": "^3.3.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "viser-react": "^2.4.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
