--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "g2": "^2.3.13",
     "g2-react": "^1.3.2",
     "history": "^4.7.2",
+    "jquery": "^3.4.1",
     "moment": "^2.23.0",
     "react": "^16.6.1",
     "react-app-rewire-less": "^2.1.3",
